@@ -110,6 +110,11 @@ loaded."
 	(focus-frame (first *screen-list*) (screen-current-frame (first *screen-list*)))
 	;; Setup the default key bindings. FIXME: should this be in the hook?
 	(set-default-bindings)
+        ;; Set the DISPLAY-environment-variable properly. This is
+        ;; necessary if Stumpwm is running from a Lisp in another
+        ;; X-display.
+	;; SBCL doesn't have a setenv.
+        #-sbcl(setf (getenv "DISPLAY") display-str)
 	(echo-string (first *screen-list*) "Welcome to The Stump Window Manager!")
 	;; Load rc file
 	(multiple-value-bind (success err rc) (load-rc-file)
